# CudaBackend

./: .cproject  .gitignore  .project  CMakeLists.txt  Doxyfile
app/: CudaBackend.cu
include/Avocado/: cuda_backend.h
include/CudaBackend/: cuda_backend.h
include/avocado/: cuda_backend.h
src/: CMakeLists.txt  activations.cu  activations.cuh  batchnorm.cu  context.cpp  context.hpp  conv2d_implicit_gemm.cu  conversions.cu  convolution.cu  cuda_features.cpp  cuda_properties.cpp  descriptors.cu  dropout.cu  gemm.cpp  im2col.cu  im2row.cu  logical_ops.cuh  losses.cu  memory.cu  metrics.cu  optimizers.cu  pooling.cu  reduction_utils.cuh  regularizers.cu  softmax.cu  tensor_binary_op.cu  tensor_op.cu  tensor_reduction.cu  tensor_unary_op.cu  utilities.hpp  winograd.cu  winograd.hpp  winograd_fused.cu  winograd_nonfused.cu
src/numbers/: bf16_number.cuh  fp16_number.cuh  fp32_number.cuh  fp64_number.cuh  generic_number.cuh  numbers.cuh
test/: test_activation.cpp  test_batchnorm.cpp  test_binary_op.cpp  test_gemm.cpp  test_im2row.cpp  test_launcher.cpp  test_losses.cpp  test_optimizers.cpp  test_reduction.cpp  test_regularizers.cpp  test_softmax.cpp  test_tensor_op.cpp  test_unary_op.cpp  test_winograd.cpp
